 - SDL: Attach rumble in SDL frontend
 - GBA Hardware: Improve Game Boy Player rumble behavior
 - GB: Initialize audio properly
 - GB MBC: Fix RTC access when no save file is loaded
 - GB: Properly clear KEY1 bit 0 when switching speeds
 - LR35902: Fix core never exiting with certain event patterns
 - GBA Cheats: Fix uninitialized memory getting freed when saving
Misc:
 - All: Only update version info if needed
 - FFmpeg: Encoding cleanup
 - GB Memory: Initialize RAM pattern for GBC
 - SDL: Remove scancode key input
 - GB Video: Improved video timings
 - All: Split out install locations for Libretro and OpenEmu
 - GBA Video: Clean up unused timers

0.5.0: (2016-09-19)
Features:
 - Game Boy support
 - Support for encrypted CodeBreaker GBA cheats
 - Emulation of Vast Fame protected GBA carts (taizou)
 - Tile viewer
 - Threaded rendering mode
 - Libretro: Memory map and achievement support (leiradel)
 - GUI: Add UI control remapping
 - GUI: Add fast-forward
 - Wii: 240p support
 - 3DS: Adjustable screen darkening
 - Ability to temporarily load a savegame
 - Load specific files out of archives
 - Automatic BIOS detection
Bugfixes:
 - ARM7: Fix decoding of Thumb ADD (variants 5 and 6)
 - Debugger: Fix GDB breakpoints
 - GBA: Fix losing IRQs when CPSR I bit isn't cleared
 - GBA: Fix filehandle leak with savegames
 - GBA: Timer 0 cannot be count up
 - GBA: Count up timers should not count themselves
 - GBA Memory: Fix mirror on non-overdumped Classic NES games
 - GBA Memory: Fix ldm {pc}
 - GBA Savedata: Fix savedata sync timer
 - GBA Savedata: Only unmap savedata if present
 - GBA Serialize: Savestates now properly store prefetch
 - GBA Video: WIN0/1 take priority over OBJWIN
 - GBA Video: Fix out-of-order OBJWIN
 - PSP2: Fix GPU crash while exiting
 - PSP2: Fix VSync
 - PSP2: Fix accelerometer range
 - PSP2: Actually load screen mode setting
 - PSP2: Fix gyroscope direction
 - PSP2: Delete threads after they return
 - PSP2: Fix mapping/unmapping from not at 0