@@ -24,6 +24,7 @@ Bugfixes:
  - GB: Properly clear KEY1 bit 0 when switching speeds
  - LR35902: Fix core never exiting with certain event patterns
  - GBA Cheats: Fix uninitialized memory getting freed when saving
+ - GBA Memory: Fix several unused I/O register read values
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
